# Numerical_methods_for_PDEs_2025-2_Andres_Amelia_Melany

./: .gitignore  Chocolatera.ipynb  README.md  main.ipynb  main.py  miniproject_1.ipynb  pyproject.toml  utilities.py
Miniproyecto-1/: Chocolatera.ipynb  utilities.py
Miniproyecto1/: Chocolatera.ipynb  ExponentialDecay.ipynb  exponentialDecay.py  utilities.py
Miniproyecto1/CoordinateChange/: initial_prompt.fdb_latexmk  initial_prompt.fls  initial_prompt.tex  jacobian_v1.aux  jacobian_v1.fdb_latexmk  jacobian_v1.fls  jacobian_v1.out  jacobian_v1.tex  jacobian_v2.aux  jacobian_v2.fdb_latexmk  jacobian_v2.fls  jacobian_v2.out  jacobian_v2.tex
Miniproyecto1/numericalMethods/: exponentialDecay.py  finiteDifferences.py  integration.py  interpolation.py
Miniproyecto2/: Laplace.ipynb  Laplace.py  Laplace_Axb.ipynb  Laplace_iterative.ipynb  utilities2.py
Miniproyecto3/: FEM_1D_poisson.ipynb  FEM_2D_hexmirror.ipynb
miniproyecto1/: Punto1_Chocolatera.ipynb  interpolation_points.txt
numericalMethods/: interpolation.py  setup.py
numericalMethods/numericalMethods.egg-info/: PKG-INFO  SOURCES.txt
src/: pyproject.toml
src/numericalMethods/: interpolation.py
src/numericalMethods.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
