[project]
name = "numerical-methods-for-pdes-2025-2-andres-amelia-melany"
version = "0.1.0"
description = "Miniproyect development for the class of Numerical Methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "sympy>=1.14.0",
]
